update file generator

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,5 @@
-/SubBuffer.class
-/SubBufferTest.class
+/Genfile.class
+/Genfile$Pair.class
+/Genfile_proj3$Pair.class
+/Genfile_proj3.class
+/Pair.class
